==> cxl0928/car_balancer/User/NRF24L01.c <==
#include "../ti_msp_dl_config.h"
#include "NRF24L01_Define.h"
#define NRF24L01_TX_PACKET_WIDTH		5							//发送数据包宽度，范围：1~32字节
#define NRF24L01_RX_PACKET_WIDTH		5							//接收通道0数据包宽度，范围：1~32字节

void NRF24L01_W_CE(uint8_t BitValue)
{
	if (BitValue)
		DL_GPIO_setPins(NRF_CE_PORT, NRF_CE_PIN_12_PIN);
	else
		DL_GPIO_clearPins(NRF_CE_PORT, NRF_CE_PIN_12_PIN);
}

void NRF24L01_W_CSN(uint8_t BitValue)
{
	if (BitValue)
		DL_GPIO_setPins(NRF_CSN_PORT, NRF_CSN_PIN_11_PIN);
	else
		DL_GPIO_clearPins(NRF_CSN_PORT, NRF_CSN_PIN_11_PIN);
}

static uint8_t NRF24L01_SPI_SwapByte(uint8_t Byte)
{
	DL_SPI_transmitDataBlocking8(SPI_1_INST, Byte);
	return DL_SPI_receiveDataBlocking8(SPI_1_INST);
}
